# pydantic-ai-chat

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  README.md  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.zed/: settings.json
server/: main.py  pyproject.toml  vercel_ai_types.py
src/: App.tsx  Chat.tsx  Part.tsx  index.css
src/components/ai-elements/: actions.tsx  branch.tsx  code-block.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  response.tsx  sources.tsx  suggestion.tsx  task.tsx  tool.tsx  web-preview.tsx
src/components/ui/: carousel.tsx  collapsible.tsx
